# bobetocalo_amdo16

./: CMakeLists.txt  README.md
data/trees_hp/: tree_000.txt  tree_001.txt  tree_002.txt  tree_003.txt  tree_004.txt  tree_005.txt  tree_006.txt  tree_007.txt  tree_008.txt  tree_009.txt  tree_010.txt  tree_011.txt  tree_012.txt  tree_013.txt  tree_014.txt  tree_015.txt  tree_016.txt  tree_017.txt  tree_018.txt  tree_019.txt
include/: Constants.hpp  FaceHeadPoseForest.hpp  FeatureChannelFactory.hpp  Forest.hpp  HeadPoseSample.hpp  ImageSample.hpp  SplitGen.hpp  ThreadPool.hpp  ThresholdSplit.hpp  Tree.hpp  TreeNode.hpp
src/: FaceHeadPoseForest.cpp  HeadPoseSample.cpp  ImageSample.cpp
test/: face_headpose_bobetocalo_amdo15_test.cpp  face_headpose_bobetocalo_amdo16_test.cpp
